# mmcupdater-server

./: .env.default  Cargo.toml  build.sh  config.toml  default_server.json  how-to-use.md  readme.md
architecture/: instance.md
base/: Cargo.toml
base/src/: lib.rs  ser_ref.rs  value.rs
derive/: Cargo.toml
derive/src/: lib.rs
mc/: config.json  start.sh  user_jvm_args.txt
migrations/: 1_create_user_table.sql
src/: config.rs  file_info.rs  file_scanner.rs  info.rs  jar_scanner.rs  main.rs  minecraft_mod.rs  schema.rs  util.rs
src/cli/: mod.rs  user.rs
src/db/: cache.rs  mod.rs  repository.rs  table_meta.rs
src/entity/: user.rs
src/instance/: mc_instance.rs  mc_mod.rs  mc_server.rs  mod.rs
src/manager/: instance_manager.rs  mod.rs
src/mc/: mc_config.rs  mc_version.rs  mod.rs
src/resources/: config_docs.yml  default_jvm_args.txt  dummy_config.yml  start_script.sh
src/util/: config.rs  errors.rs  fs.rs  gh.rs  http.rs  java.rs  logger.rs  mod.rs  modification.rs  platform.rs  process.rs  safe_writer.rs  serde.rs  string.rs  time.rs
src/web/: authentication.rs  http.rs  mod.rs  routes.rs  v1.rs
src/web/v1/: auth.rs  instance.rs  user.rs
ui/: .npmrc  index.html  package.json  tsconfig.json
ui/public/: index.html
ui/src/: App.svelte  FileManager.svelte  app.css
ui/src/api/: api.ts  instance.ts  shared_state.ts  system.ts  user.ts
ui/src/lang/: en.js  lang.ts
ui/src/lib/: AnimatedDiv.svelte  AppBar.svelte  Container.svelte  ContainerForm.svelte  ContextMenu.svelte  FileManager.svelte  ProgressAuto.svelte  Section.svelte
ui/src/lib/instance/: Mods.svelte
ui/src/lib/nav/: AppBarMobile.svelte  NavDropdown.svelte  NavLinkItem.svelte
ui/src/page/: Home.svelte  Instance.svelte  Loading.svelte  Login.svelte  NotFound.svelte
ui/src/util/: alert.ts  constants.ts  dom_helper.ts  math.ts  memory_unit.ts  promise.ts  remote_fs.ts  routes.ts  shared.ts
