[package]
name = "mmcupdater-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.5", features = ["multipart"] }
base32 = "0.4"
bytes = { version = "1.1", features = [] }
csv-async = { version = "1.2", features = ["tokio"] }
dotenv = "0.15"
futures = "0.3"
hashbrown = "0.13"
hex = "0.4"
md5 = { version = "0.7", features = [] }
once_cell = "1"
parking_lot = "0.12"
rand = { version = "0", features = [] }
regex = { version = "1.5" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "macros", "sync", "parking_lot", "io-util"] }
tokio-rayon = "2"
toml = { version = "0.5", features = [] }
tower = "0.4"
tower-http = { version = "0.3", features = ["fs", "cors"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
zip = "0.6"

pedestal-rs = { git = "https://github.com/Wireless4024/pedestal-rs.git", rev = "eddd7bd" ,features=["fs"]}

[profile.release]
debug-assertions = false
opt-level = 3
lto = "thin"
