[package]
name = "mmcupdater"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1"

# Http
axum = { version = "0.6", features = ["multipart"] }
axum-server = "0.4"
hyper = "0.14"
reqwest = { version = "0.11", features = ["async-compression", "rustls", "json", "stream"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["fs", "cors", "tracing"] }

# Encoding
base32 = "0.4"
csv-async = { version = "1.2", features = ["tokio"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sha2 = { version = "0.10" }

bstr = "1.0"
bytes = { version = "1.1", features = [] }

# Replacement
hashbrown = { version = "0.13", features = ["serde"] }

# Configuration
dotenv = "0.15"

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "macros", "sync", "parking_lot", "io-util"] }
tokio-rayon = "2"

# Async utils
futures = "0.3"

# Misc
flate2 = { version = "1.0" }
rand = { version = "0", features = [] }
regex = { version = "1.5" }
tar = "0.4"
zip = "0.6"

# Logging
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Shared lib
pedestal-rs = { git = "https://github.com/Wireless4024/pedestal-rs.git", rev = "c6d66471912a4981feca248be7f0b27d3ec3dbc3", features = ["fs"] }

[profile.release]
debug-assertions = false
opt-level = 3
lto = "thin"
