[package]
name = "mmcupdater"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["base", "derive"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1"

# Http
axum = { version = "0.6", features = ["multipart"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
hyper = "0.14"
reqwest = { version = "0.11", features = ["async-compression", "rustls", "json", "stream"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["fs", "cors", "tracing"] }
tower-cookies = "0.8"
# auth
cookie = "0.16"
jsonwebtoken = "8.1"
openssl = { version = "0.10", features = [] }
rust-argon2 = "1.0"

# Encoding
base32 = "0.4"
csv-async = { version = "1.2", features = ["tokio"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sha2 = { version = "0.10" }

bstr = "1.0"
bytes = { version = "1.1", features = [] }

# Replacement
fxhash = "0.2"
dashmap = "5.4"
hashbrown = { version = "0.13", features = ["serde", "ahash"] }

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "macros", "sync", "parking_lot", "io-util"] }
tokio-rayon = "2"

# Async utils
async-trait = "0.1"
futures = "0.3"

# Misc
flate2 = { version = "1.0" }
rand = { version = "0", features = ["rand_chacha"] }
regex = { version = "1.5" }
sys-info = "0.9"
tar = "0.4"
zip = "0.6"

# Database
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
base = { path = "base" }
derive = { path = "derive" }

# Logging
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Cli
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.2"

# Shared lib
pedestal-rs = { git = "https://github.com/Wireless4024/pedestal-rs.git", rev = "8d647244817d4f11efa666f9ad189c5be60d9785", features = ["fs", "mutation", "async"] }

[profile.release]
debug-assertions = false
opt-level = 3
lto = "thin"
